force-app/main/default/objects/Account/fields/Custom_Field_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Not_Required__c</fullName>
    <label>Custom Field Not Required</label>
    <type>Text</type>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <length>20</length>
</CustomField>