force-app/main/default/objects/Account/fields/isunknown__c.field-meta.xml
<CustomField>
    <fullName>isunknown__c</fullName>
    <label>isunknown</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>