force-app/main/default/objects/Account/fields/LookupToAsset__c.field-meta.xml
<CustomField>
    <fullName>LookupToAsset__c</fullName>
    <label>LookupToAsset</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <relationshipLabel>Accounts (LookupToAsset)</relationshipLabel>
</CustomField>