force-app/main/default/objects/Account/fields/LookupToTest__c.field-meta.xml
<CustomField>
    <fullName>LookupToTest__c</fullName>
    <label>TestCustomObject</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>TestCustomObject__c</referenceTo>
    <relationshipName>testCustoms</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <relationshipLabel>Accounts</relationshipLabel>
</CustomField>