force-app/main/default/objects/Account/fields/RelationshipToAsset__c.field-meta.xml
<CustomField>
    <fullName>RelationshipToAsset__c</fullName>
    <label>Asset</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <relationshipLabel>Accounts</relationshipLabel>
</CustomField>