force-app/main/default/objects/Account/fields/SBQQ__AssetQuantitiesCombined__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
    <label>Combine Asset Quantities</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
    <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
</CustomField>