force-app/main/default/objects/Account/fields/SBQQ__ContractCoTermination__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ContractCoTermination__c</fullName>
    <label>Contract Co-Termination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
                <isActive>true</isActive>
                <label>Never</label>
                <default>true</default>
            </value>
            <value>
                <fullName>Always</fullName>
                <isActive>true</isActive>
                <label>Always</label>
            </value>
            <value>
                <fullName>Prompt</fullName>
                <isActive>true</isActive>
                <label>Prompt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
    <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
</CustomField>