force-app/main/default/objects/Account/fields/SBQQ__CoTermedContractsCombined__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
    <label>Combine Co-Termed Contracts</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
    <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
</CustomField>