force-app/main/default/objects/Account/fields/SBQQ__RenewalPricingMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalPricingMethod__c</fullName>
    <label>Renewal Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same</fullName>
                <isActive>true</isActive>
                <label>Same</label>
                <default>true</default>
            </value>
            <value>
                <fullName>List</fullName>
                <isActive>true</isActive>
                <label>List</label>
            </value>
            <value>
                <fullName>Uplift</fullName>
                <isActive>true</isActive>
                <label>Uplift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Method for pricing products on renewal.</description>
    <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
</CustomField>