force-app/main/default/objects/Account/fields/test_for_unknown__c.field-meta.xml
<CustomField>
    <fullName>test_for_unknown__c</fullName>
    <label>test for unknown</label>
    <type>Date</type>
</CustomField>