force-app/main/default/objects/Account/fields/TestCollectionField__c.field-meta.xml
<CustomField>
    <fullName>TestCollectionField__c</fullName>
    <label>TestCollectionField</label>
    <type>MultiselectPicklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
                <isActive>true</isActive>
                <label>First</label>
                <default>true</default>
            </value>
            <value>
                <fullName>Second</fullName>
                <isActive>true</isActive>
                <label>Second</label>
            </value>
            <value>
                <fullName>Third</fullName>
                <isActive>true</isActive>
                <label>Third</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>