force-app/main/default/objects/Account/fields/top_secret__c.field-meta.xml
<CustomField>
    <fullName>top_secret__c</fullName>
    <label>top secret</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>