force-app/main/default/objects/Account/recordTypes/Big_Account.recordType-meta.xml
<RecordType>
    <fullName>Big_Account</fullName>
    <active>true</active>
    <label>Big Account</label>
</RecordType>