force-app/main/default/objects/Account/recordTypes/Little_Account.recordType-meta.xml
<RecordType>
    <fullName>Little_Account</fullName>
    <active>true</active>
    <label>Little Account</label>
</RecordType>