force-app/main/default/objects/Account/recordTypes/RestrictedAccountRecordType.recordType-meta.xml
<RecordType>
    <fullName>RestrictedAccountRecordType</fullName>
    <active>true</active>
    <label>RestrictedAccountRecordType</label>
</RecordType>