force-app/main/default/objects/Account/recordTypes/yyyyyyyy.recordType-meta.xml
<RecordType>
    <fullName>yyyyyyyy</fullName>
    <active>true</active>
    <label>yyyyyyy</label>
</RecordType>