force-app/main/default/objects/Account/validationRules/Almog_Account_Custom_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Almog_Account_Custom_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Name  = &quot;invalid&quot;</errorConditionFormula>
    <errorMessage>Account name is invalid</errorMessage>
</ValidationRule>